--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -26,7 +26,7 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.JPG" alt="">
+                  <img src="portfolio-details-1.JPG" alt="">
                 </div>
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
