--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -55,6 +55,15 @@
 
       </div>
     </div>
+   <nav id="navbar" class="navbar"> 
+      <ul> 
+        <li><a class="nav-link active"  href="index.html">Retour</a></li>
+       <br>
+      </ul>
+    </nav>
+    <br>
+    <br>
+    
   </main>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
