--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="portfolio-5.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Norly Tshaba</h4>
               <p>Mon fils</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-5.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -180,12 +180,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="portfolio-6.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Mardochee Ngoy</h4>
               <p>Maestro de la Presse</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-6.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div> 
@@ -193,12 +193,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+            <img src="portfolio-7.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Clems Kilonda</h4>
               <p>Mon fils ainé</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-7.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -206,12 +206,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-card">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+            <img src="portfolio-8.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Lydie Tutonda</h4>
               <p>Cherie &#128151;</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-8.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -219,12 +219,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+            <img src="portfolio-9.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Bolzano Mwanda</h4>
               <p>Ir Informaticien</p>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-9.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
@@ -232,12 +232,12 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/portfolio-10.jpg" class="img-fluid" alt="">
+            <img src="portfolio-10.JPG" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Jonathan Ngolo</h4>
               <p>Guitariste Informaticien</p> 
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-10.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-10.JPG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
