--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h1><a href="index.html">Opera Ngovula</a></h1>
      
-      <h2>Je suis un passionné du <span>Dev Web</span> suis au Congo DRC</h2>
+      <h2>Je suis un passionné du <span>Dev Web</span> résidant au Congo DRC</h2>
 
       <nav id="navbar" class="navbar"> 
         <ul> 
